--- a/config/data_sources.yaml
+++ b/config/data_sources.yaml
@@ -2,6 +2,19 @@
 # This file defines the available data sources for DFS projections
 
 data_sources:
+  daily_fantasy_fuel:
+    name: "Daily Fantasy Fuel"
+    type: "file"
+    base_url: "https://www.dailyfantasyfuel.com"
+    rate_limit_delay: 0.0
+    max_retries: 1
+    timeout: 30
+    sports: ["nfl", "nba", "mlb", "nhl", "wnba"]
+    description: "Premium DFS projections for all major sports (requires CSV export)"
+    platforms: ["DraftKings", "FanDuel"]
+    requires_subscription: true
+    data_format: "csv"
+    
   basketball_reference:
     name: "Basketball Reference"
     type: "web_scraping"
