--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "lxml>=4.9.0",
     "pydantic>=2.0.0",
     "pyyaml>=6.0",
+    "ipykernel>=6.30.1",
 ]
 
 [project.optional-dependencies]
