--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,30 @@
 [project]
-name = "dfs-fantasy"
+name = "fantasy-dfs-optimizer"
 version = "0.1.0"
-description = "DFS Fantasy Sports lineup optimization system"
+description = "Daily Fantasy Sports lineup optimization system"
 readme = "README.md"
 license = {text = "MIT"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Fantasy DFS Team", email = "team@fantasydfs.com"}
 ]
+keywords = ["fantasy", "dfs", "sports", "optimization", "lineup"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Topic :: Office/Business :: Financial :: Investment",
-    "Topic :: Scientific/Engineering :: Information Analysis",
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "requests>=2.31.0",
-    "beautifulsoup4>=4.12.0",
-    "pandas>=2.0.0",
-    "numpy>=1.24.0",
-    "python-dotenv>=1.0.0",
     "aiohttp>=3.8.0",
-    "selenium>=4.15.0",
-    "webdriver-manager>=4.0.0",
-    "lxml>=4.9.0",
-    "pydantic>=2.0.0",
-    "pyyaml>=6.0",
-    "ipykernel>=6.30.1",
+    "beautifulsoup4>=4.11.0",
+    "selenium>=4.0.0",
+    "webdriver-manager>=3.8.0",
+    "pydfs-lineup-optimizer>=1.0.0",
 ]
 
 [project.optional-dependencies]
